test/positive/feature_extends.java

public class feature_extends extends java.io.OutputStream {
  public feature_extends() {}
}

