test/negative/CyclicClasses/A.java
package A;
import B.B;
public class A extends B {
    public A() {}
}
